# ai-digest

./: Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: test_unit.rs
