[package]
name = "ai-digest"
version = "0.2.1"
authors = ["Aditya Bhat <adityabhatperdoor@gmail.com>"]
edition = "2021"
description = "A CLI tool that aggregates your codebase into a single Markdown file for use with Claude Projects or custom ChatGPTs."
license = "MIT"
repository = "https://github.com/adityarb2003/ai-digest"
homepage = "https://github.com/adityarb2003"
readme = "README.md"
keywords = ["CLI", "Markdown"]
categories = ["command-line-utilities", "development-tools"]


[dependencies]
clap = "4.5.23"
walkdir = "2.5.0"
rayon = "1.10.0"

[dev-dependencies]
tempfile = "3.14.0"

